# lumachords

./: .gitignore  KNOWN-ISSUES.md  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  continuity_experiment.ipynb  experiment.ipynb  lumachords.spec  pyproject.toml
.github/workflows/: build-release.yml  documentation.yml
docs/: METHODOLOGY.md  installing-ffmpeg.html
experiment_samples/: EXPERIMENT_SOURCES.txt
lumachords/: __init__.py  __main__.py  app.py  artifact_sink.py  data_types.py  entrypoint.py  fft_analyzer.py  hands_detector.py  image_input.py  image_utils.py  keybed_detector.py  midi_tracker.py  notation_placer.py  notation_renderer.py  preferences.py  processing_state.py  processor.py  profile_store.py  rendering.py  runtime_config.py  staff_mapping.py  timing_estimator.py  ui_types.py  utils.py
lumachords/gui/: __init__.py  file_dialog_utils.py  window.py  window_geometry_helper.py  window_gl_helper.py
lumachords/midi_rt/: __init__.py  common.py  midi_rt.py
lumachords/midi_rt/backends/: __init__.py  midi_rt_base_backend.py  midi_rt_dummy_backend.py  midi_rt_fluid_synth_backend.py  midi_rt_mido_backend.py
lumachords/note_rain/: __init__.py  note_rain_pipeline.py  note_rain_tracker.py  note_rain_utils.py
lumachords/note_rain/strategies/: note_rain_detection_strategy.py
lumachords/note_rain/strategies/sparsebg/: box_detector.py  sparsebg_detection_strategy.py
lumachords/note_rain/strategies/texturedbg/: boundary_detector.py  edge_detector.py  texturedbg_detection_strategy.py
lumachords/overlays/: __init__.py  base_overlay.py  error_overlay.py  menu_overlay.py  overlay_manager.py  progress_overlay.py  toast_overlay.py
lumachords/overlays/menu_builders/: __init__.py  common.py  ffmpeg_builder.py  processing_builder.py  start_builder.py
lumachords/video/: __init__.py  video_reader.py  video_writer.py  youtube_download_service.py
lumachords/video/backends/: __init__.py  base_video_backends.py  ffmpeg_video_backends.py  opencv_video_backends.py
resources/: icon.icns
scripts/: build.bat  build.sh  publish-pypi.sh  publish-testpypi.sh  recreate-venv.sh  regenerate-spec.sh
tests/: test_keybed_detector.py  test_midi_tracker.py  utils.py
tests/data/: TEST_SOURCES.txt
tests/note_rain/: test_boundary_detector.py  test_edge_detector.py  test_note_rain_tracker.py
